# rules_prisma

./: .gitignore  README.md
example/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  tsconfig.json
example/prisma/: BUILD.bazel  schema.prisma
example/server/: BUILD.bazel  MyServer.ts
example/tools/: bazel_deps.bzl
prisma/: prisma.bzl
prisma/internal/: BUILD.bazel  prisma_wrapper.js
